# Rust_Training

./: LICENSE  README.md
Assets/Scripts/Adde9708/factory/: Cargo.toml
Assets/Scripts/Adde9708/factory/src/: armys.rs  factory.rs  main.rs  weapons.rs
Assets/Scripts/Adde9708/hello_world01/: Cargo.toml
Assets/Scripts/KiraT/animal_farm01/: Cargo.toml
Assets/Scripts/KiraT/animal_farm01/src/: animals.rs  main.rs
Assets/Scripts/KiraT/big_city01/: Cargo.toml
Assets/Scripts/KiraT/big_city01/src/: cities.rs  cities_creation.rs  houses.rs  main.rs  municipals.rs  offices.rs
Assets/Scripts/KiraT/hello_world01/: Cargo.toml
Assets/Scripts/KiraT/hello_world01/src/: main.rs
